ecmascript/parser/tests/test262-error-references/fail/12f5bc355427b8f8.js.stderr
error: Expression expected
 --> $DIR/tests/test262-parser/fail/12f5bc355427b8f8.js:1:4
  |
1 | () + 0
  |    ^

